<resources>
    <string name="app_name">Nemeum</string>
    <string name="app_language_spanish">es</string>
    <string name="app_language_english">en</string>
    <string name="userNameSP">userName</string>
    <string name="userTypeSP">userType</string>
    <string name="individualUserSP">Individual</string>
    <string name="trainerUserSP">Trainer</string>
    <string name="companyUserSP">Company</string>
    <string name="appLanguageSP">appLanguage</string>
    <string name="notLoggedSP">notLogged</string>
    <string name="idUserSP">idUser</string>
    <string name="idCompanySP">idCompany</string>
    <string name="urlDB">https://nemeum.herokuapp.com</string>
    <string name="companyUserDB">/companyuser</string>
    <string name="loginDB">/login</string>
    <string name="scenariosDB">/scenario</string>
    <string name="listDB">/list</string>
    <string name="userDB">/user</string>
    <string name="trainerDB">/traineruser</string>
    <string name="eventDB">/event</string>
    <string name="scenarioJoinDB">/joinScenario</string>
    <string name="trainerUserDB">/traineruser</string>
    <string name="trainerJoinDB">/joinTrainer</string>
    <string name="trainerSportDB">/trainersport</string>
    <string name="serviceDB">/service</string>
    <string name="dbAccessAccept">Accept</string>
    <string name="dbAccessContentType">Content-type</string>
    <string name="dbAccessAppJson">application/json</string>
    <string name="companyNameJson">companyName</string>
    <string name="companyEmailJson">email</string>
    <string name="companyPhoneJson">phone</string>
    <string name="companyUsernameJson">username</string>
    <string name="companyPasswordJson">password</string>
    <string name="companyCommercialNameJson">comercialName</string>
    <string name="companyAddressJson">address</string>
    <string name="companyCityJson">city</string>
    <string name="companyPostalCodeJson">postalCode</string>
    <string name="companyContactPersonJson">contactPerson</string>
    <string name="companySSNJson">ssn</string>
    <string name="companyPremiumJson">premium</string>
    <string name="loginEmailJson">email</string>
    <string name="loginPasswordJson">password</string>
    <string name="scenarioIdJson">idScenario</string>
    <string name="scenarioSportIdJson">idSport</string>
    <string name="scenarioPriceJson">price</string>
    <string name="scenarioCompanyIdJson">idCompany</string>
    <string name="scenarioDescriptionJson">description</string>
    <string name="scenarioCapacityJson">capacity</string>
    <string name="scenarioAddressJson">address</string>
    <string name="scenarioDateJson">dateScenario</string>
    <string name="scenarioTitleJson">title</string>
    <string name="scenarioImageJson">image</string>
    <string name="scenarioIndoorJson">indoor</string>
    <string name="individualNameJson">firstName</string>
    <string name="individualEmailJson">email</string>
    <string name="individualPhoneJson">phone</string>
    <string name="individualUsernameJson">username</string>
    <string name="individualPasswordJson">password</string>
    <string name="individualSurnameJson">lastSurname</string>
    <string name="individualAddressJson">address</string>
    <string name="individualCityJson">city</string>
    <string name="individualPostalCodeJson">postalCode</string>
    <string name="individualPremiumJson">premium</string>
    <string name="trainerNameJson">firstName</string>
    <string name="trainerEmailJson">email</string>
    <string name="trainerPhoneJson">phone</string>
    <string name="trainerUsernameJson">username</string>
    <string name="trainerPasswordJson">password</string>
    <string name="trainerSurnameJson">lastSurname</string>
    <string name="trainerAddressJson">address</string>
    <string name="trainerCityJson">city</string>
    <string name="trainerPostalCodeJson">postalCode</string>
    <string name="trainerPremiumJson">premium</string>
    <string name="eventIdJson">idEvent</string>
    <string name="eventSportIdJson">idSport</string>
    <string name="eventCompanyIdJson">idCompanyUser</string>
    <string name="eventUserIdJson">idUser</string>
    <string name="eventTrainerIdJson">idTrainer</string>
    <string name="eventIndoorJson">indoor</string>
    <string name="eventCapacityJson">capacity</string>
    <string name="eventPriceJson">price</string>
    <string name="eventCityJson">city</string>
    <string name="eventAddressJson">address</string>
    <string name="eventPostalCodeJson">postalCode</string>
    <string name="eventPhoneJson">phone</string>
    <string name="eventDateEventJson">dateEvent</string>
    <string name="eventDescriptionJson">description</string>
    <string name="eventImageJson">image</string>
    <string name="eventTitleJson">title</string>
    <string name="userScenario_userscenarioJson">userScenario</string>
    <string name="userScenario_idUserJson">idUser</string>
    <string name="userScenario_idScenarioJson">idScenario</string>
    <string name="userScenario_dateBookingJson">dateBooking</string>
    <string name="userScenario_startScenarioJson">startScenario</string>
    <string name="userScenario_endScenarioJson">endScenario</string>
    <string name="userScenario_phoneJson">phone</string>
    <string name="userScenario_emailJson">email</string>
    <string name="bookingTrainer_bookingTrainerIDJson">idBookingTrainer</string>
    <string name="bookingTrainer_idUserJson">idUser</string>
    <string name="bookingTrainer_idServiceJson">idService</string>
    <string name="bookingTrainer_dateBookingJson">dateBooking</string>
    <string name="bookingTrainer_startServiceJson">startBooking</string>
    <string name="bookingTrainer_endServiceJson">endBooking</string>
    <string name="bookingTrainer_priceJson">price</string>
    <string name="trainerService_idPost">id_training_service_post</string>
    <string name="trainerService_idSport">id_sport_training_type</string>
    <string name="trainerService_idTrainer">id_trainer_user</string>
    <string name="trainerService_trainingAddress">training_address</string>
    <string name="trainerService_trainingCity">training_city</string>
    <string name="trainerService_trainingDescription">training_desc</string>
    <string name="trainerService_trainingPrice">training_price</string>
    <string name="trainerService_trainingStart">training_start</string>
    <string name="trainerService_trainingEnd">training_end</string>
    <string name="login_forgot_pass">Forgot Password?</string>
    <string name="search_home">Home</string>
    <string name="search_trainer">Search\nTrainer</string>
    <string name="search_facilities">Search\nCompany</string>
    <string name="search_event">Search\nEvents</string>
    <string name="search_scenario">Search\nScenario</string>
    <string name="create_event">Create\nEvent</string>
    <string name="create_scenario">Create\nScenario</string>
    <string name="edit_scenario">Edit\nScenario</string>
    <string name="update_schedule">Update\nSchedule</string>
    <string name="my_bookings">My Bookings</string>
    <string name="create_service">Create\nService</string>
    <string name="edit_service">Edit\nService</string>
    <string name="my_account">My Account</string>
    <string name="settings">Settings</string>
    <string name="login">Login</string>
    <string name="menuHome">Home</string>
    <string name="menuSettings">Settings</string>
    <string name="menuLogin">Login / Register</string>
    <string name="menuAccount">My Account</string>
    <string name="compScenarioTitle">Company Scenario</string>
    <string name="findEventTitle">Find Events</string>
    <string name="recommendedEventTitle">Recommended Event</string>
    <string name="monthSelectTitle">Select month</string>
    <string name="eventResDate">Date:</string>
    <string name="eventResAddress">Place:</string>
    <string name="eventResDescr">Description:</string>
    <string-array name="monthsEvents">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>Octuber</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    <string name="createEventTitle">Create Event</string>
    <string name="eventTitleHint">Event title *</string>
    <string name="eventDescriptionHint">Event description *</string>
    <string name="eventLocationHint">Event location *</string>
    <string name="eventCityHint">City *</string>
    <string name="eventDateHint">Select date *</string>
    <string name="detailedEventTitle">Detailed Event</string>
    <string name="findFacilityTitle">Search Companies</string>
    <string name="findScenarioTitle">Search Scenario</string>
    <string-array name="sportFilter">
        <item>Sport Type</item>
        <item>Archery</item>
        <item>Badminton</item>
        <item>Baseball</item>
        <item>Basketball</item>
        <item>Boxing</item>
        <item>Cricket</item>
        <item>Cycling</item>
        <item>Fencing</item>
        <item>Football</item>
        <item>Golf</item>
        <item>Gymnastics</item>
        <item>Handball</item>
        <item>Hockey</item>
        <item>Judo</item>
        <item>Karate</item>
        <item>Rugby</item>
        <item>Running</item>
        <item>Shooting</item>
        <item>Skateboarding</item>
        <item>Soccer</item>
        <item>Table Tenis</item>
        <item>Taekwondo</item>
        <item>Tennis</item>
        <item>Volleyball</item>
        <item>Wheightlifting</item>
        <item>Wrestling</item>
        <item>Bowling</item>
        <item>Paddle</item>
    </string-array>
    <string-array name="cityFilter">
        <item>City</item>
        <item>Alfarrás</item>
        <item>Balaguer</item>
        <item>Barcelona</item>
        <item>Guissona</item>
        <item>Lleida</item>
        <item>Zaragoza</item>
        <item>Girona</item>
        <item>Tarragona</item>
        <item>Valencia</item>
        <item>Bilbao</item>
        <item>Sevilla</item>
    </string-array>
    <string-array name="priceFilter">
        <item>Price range</item>
        <item>Until 5€</item>
        <item>Until 10€</item>
        <item>Until 20€</item>
        <item>Until 30€</item>
        <item>Until 50€</item>
        <item>Until 75€</item>
    </string-array>
    <string name="myBookingsTitle">My Bookings</string>
    <string name="bookingResTime">Time:</string>
    <string name="bookingResDate">Date:</string>
    <string name="bookingResAddress">Address:</string>
    <string name="bookingResPrice">Price:</string>
    <string name="bookingCancelTitle">Are you sure that you want to cancel?</string>
    <string name="buttonSubmit">Submit</string>
    <string name="user_Full_Name">Name</string>
    <string name="user_Last_Name">Last Name</string>
    <string name="user_Email">Email</string>
    <string name="user_Phone">Phone</string>
    <string name="user_Address">Address</string>
    <string name="user_City">City</string>
    <string name="user_Postal_Code">Postal Code</string>
    <string name="password">Password</string>
    <string name="settingsTitle">Settings</string>
    <string name="languageButtonTitle">Language</string>
    <string name="notificationButtonTitle">Notification</string>
    <string name="versionButtonTitle">Version</string>
    <string name="aboutButtonTitle">About Us</string>
    <string name="backButtonTitle">Back</string>
    <string name="company_name">Company Name</string>
    <string name="comercial_name">Comercial name</string>
    <string name="contact_person">Contact person</string>
    <string name="ssn">Ssn</string>
    <string name="username">Username</string>
    <string name="repeat_password">Repeat your password</string>
    <string name="premium">Premium?</string>
</resources>