<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/homeButton"
        android:enabled="true"
        android:icon="@mipmap/home_icon"
        android:title="@string/menuHome"
        android:visible="true"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/settingsButton"
        android:enabled="true"
        android:icon="@mipmap/settings_icon"
        android:title="@string/menuSettings"
        android:visible="true"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/loginButton"
        android:enabled="true"
        android:icon="@mipmap/login_icon"
        android:title="@string/menuLogin"
        android:visible="true"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/accountButton"
        android:enabled="true"
        android:icon="@mipmap/my_account_icon"
        android:title="@string/menuAccount"
        android:visible="true"
        app:showAsAction="ifRoom" />
</menu>
