<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/nemeum_registration_background">

    <EditText
        android:id="@+id/CompanyNameRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/company_name"
        android:textColorHint="#2e9cca"
        android:textSize="13sp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="510dp"
        android:textColor="#ffffff"/>

    <EditText
        android:id="@+id/CompanyComercialNameRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/comercial_name"
        android:textColorHint="#2e9cca"
        android:textSize="13sp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="475dp"
        android:textColor="#ffffff"/>

    <EditText
        android:id="@+id/CompanyContactPersonRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/contact_person"
        android:textColorHint="#2e9cca"
        android:textSize="13sp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="440dp"
        android:textColor="#ffffff"/>

    <EditText
        android:id="@+id/CompanySsnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/ssn"
        android:textColorHint="#2e9cca"
        android:textSize="13sp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="405dp"
        android:textColor="#ffffff"/>

    <EditText
        android:id="@+id/CompanyEmailAddressRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/user_Email"
        android:textColorHint="#2e9cca"
        android:textSize="13sp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="370dp"
        android:textColor="#ffffff"/>

    <EditText
        android:id="@+id/CompanyTelephoneRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/user_Phone"
        android:textColorHint="#2e9cca"
        android:textSize="13sp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="335dp"
        android:textColor="#ffffff"/>

    <EditText
        android:id="@+id/CompanyCityRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/user_City"
        android:textColorHint="#2e9cca"
        android:textSize="13sp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="300dp"
        android:textColor="#ffffff"/>

    <EditText
        android:id="@+id/CompanyAddressRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/user_Address"
        android:textColorHint="#2e9cca"
        android:textSize="13sp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="265dp"
        android:textColor="#ffffff"/>

    <EditText
        android:id="@+id/CompanyPostalCodeRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/user_Postal_Code"
        android:textColorHint="#2e9cca"
        android:textSize="13sp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="230dp"
        android:textColor="#ffffff"/>

    <EditText
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/username"
        android:textColorHint="#2e9cca"
        android:textSize="13sp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="195dp"
        android:textColor="#ffffff"/>

    <EditText
        android:id="@+id/CompanyPasswordRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:textColorHint="#2e9cca"
        android:textSize="13sp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="160dp"
        android:textColor="#ffffff"/>

    <EditText
        android:id="@+id/CompanyPasswordValidation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/repeat_password"
        android:textColorHint="#2e9cca"
        android:textSize="13sp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="125dp"
        android:textColor="#ffffff"/>

    <CheckBox android:id="@+id/Premium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="@string/premium"
        android:textColor="#d83f87"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="90dp"/>

    <Button
        android:id="@+id/submitdatacompany"
        android:layout_width="160dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="45dp"
        android:background="@drawable/button_background1"
        android:text="@string/buttonSubmit"
        android:textColor="#25274d"
        android:textSize="12sp"/>


</RelativeLayout>