<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/userRegisterActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NormalUserRegistration"
    android:background="@drawable/nemeum_registration_background">

        <ScrollView
            android:id="@+id/scrollUserRegister"
            android:layout_width="match_parent"
            android:layout_height="343dp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/UserNameRegister"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:backgroundTint="@color/colorBlue"
                    android:inputType="text"
                    android:hint="@string/user_Full_Name"
                    android:textColorHint="@color/colorBlue"
                    android:textColorHighlight="@color/colorFont"
                    android:textSize="13sp"
                    android:textColor="@color/colorWhite"/>

                <EditText
                    android:id="@+id/UserLastNameRegister"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:backgroundTint="@color/colorBlue"
                    android:inputType="text"
                    android:hint="@string/user_Last_Name"
                    android:textColorHint="@color/colorBlue"
                    android:textColorHighlight="@color/colorFont"
                    android:textSize="13sp"
                    android:textColor="@color/colorWhite"/>

                <EditText
                    android:id="@+id/UserEmailAddressRegister"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:backgroundTint="@color/colorBlue"
                    android:inputType="textEmailAddress"
                    android:hint="@string/user_Email"
                    android:textColorHint="@color/colorBlue"
                    android:textColorHighlight="@color/colorFont"
                    android:textSize="13sp"
                    android:textColor="@color/colorWhite"/>

                <EditText
                    android:id="@+id/UserTelephoneRegister"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:backgroundTint="@color/colorBlue"
                    android:inputType="number"
                    android:hint="@string/user_Phone"
                    android:textColorHint="@color/colorBlue"
                    android:textColorHighlight="@color/colorFont"
                    android:textSize="13sp"
                    android:textColor="@color/colorWhite"/>

                <EditText
                    android:id="@+id/UserCityRegister"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:backgroundTint="@color/colorBlue"
                    android:inputType="text"
                    android:hint="@string/user_City"
                    android:textColorHint="@color/colorBlue"
                    android:textColorHighlight="@color/colorFont"
                    android:textSize="13sp"
                    android:textColor="@color/colorWhite"/>

                <EditText
                    android:id="@+id/UserAddressRegister"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:backgroundTint="@color/colorBlue"
                    android:inputType="text"
                    android:hint="@string/user_Address"
                    android:textColorHint="@color/colorBlue"
                    android:textColorHighlight="@color/colorFont"
                    android:textSize="13sp"
                    android:textColor="@color/colorWhite"/>

                <EditText
                    android:id="@+id/UserPostalCodeRegister"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:backgroundTint="@color/colorBlue"
                    android:inputType="text"
                    android:hint="@string/user_Postal_Code"
                    android:textColorHint="@color/colorBlue"
                    android:textColorHighlight="@color/colorFont"
                    android:textSize="13sp"
                    android:textColor="@color/colorWhite"/>

    <EditText
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:backgroundTint="@color/colorBlue"
        android:inputType="text"
        android:hint="@string/username"
        android:textColorHint="@color/colorBlue"
        android:textColorHighlight="@color/colorFont"
        android:textSize="13sp"
        android:textColor="@color/colorWhite"/>

                <EditText
                    android:id="@+id/UserPasswordRegister"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:backgroundTint="@color/colorBlue"
                    android:inputType="textPassword"
                    android:hint="@string/password"
                    android:textColorHint="@color/colorBlue"
                    android:textColorHighlight="@color/colorFont"
                    android:textSize="13sp"
                    android:textColor="@color/colorFont"/>

                <EditText
                    android:id="@+id/UserPasswordValidation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorBlue"
                    android:ems="10"
                    android:hint="@string/repeat_password"
                    android:inputType="textPassword"
                    android:textColor="@color/colorWhite"
                    android:textColorHighlight="@color/colorFont"
                    android:textColorHint="@color/colorBlue"
                    android:textSize="13sp" />

                <CheckBox android:id="@+id/Premium"
                    android:layout_width="160dp"
                    android:layout_height="40dp"
                    android:ems="10"
                    android:text="@string/premium"
                    android:textColor="@color/colorBlue"/>

                <Button
                    android:id="@+id/submitdatauser"
                    android:layout_width="160dp"
                    android:layout_height="40dp"
                    android:background="@drawable/button_background1"
                    android:text="@string/buttonSubmit"
                    android:textColor="@color/colorFont"
                    android:textSize="12sp"/>

            </LinearLayout>
        </ScrollView>
</RelativeLayout>